working still on notifications